<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_meme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.shannonalexander_navarro.memestudio.CreateMemeActivity">

    <LinearLayout
        android:id="@+id/textGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/app_title"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/choose_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Lily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:text="@string/lily" />

            <Button
                android:id="@+id/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:text="@string/me" />

            <Button
                android:id="@+id/theory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:text="@string/theory" />

            <Button
                android:id="@+id/paint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lilac"
                android:text="@string/paint" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/gallerybtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background">

            <ImageView
                android:id="@+id/showpicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/ltBrown"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/delete"
            android:tint="#ffeee2" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#CBFFFA"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:srcCompat="@android:drawable/ic_menu_share" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lilac"
            android:scaleX="1.1"
            android:scaleY="1.1"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:src="@drawable/home"
            android:tint="@color/white" />
    </LinearLayout>

</LinearLayout>
